--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,103 +1,13 @@
 
-<div class="row home">
-    <h3 class="row center">Tap Crest To Enter</h3>
-    <div class="hogwarts_crest col s12 m5 ">
-        <div class="card card-base col s12 m12">
-            <div class="card-content col s12 m12">
-                <a
-                href="/great_hall"
-                class="card col s12 m12 center-align house-card hogwarts_card waves-effect waves-light"
-            >
-                <div>
-                    <img
-                        src="../images/hogwarts_crest.png"
-                        width="150px"
-                        alt="hogwarts crest"
-                    />
-                </div>
-                </a>
-            </div>
-        </div>
+<main class="container">
+    <div class="row justify-content-around mt-5">
+        <h3>Login</h3>
+        <a href="/login" class="col-3 btn btn-primary"> Login</a>
+        <h3>Signup</h3>
+        <p>I am a</p>
+        <a href="/signup/teacher" class="col-3 btn btn-primary"> Teacher</a>
+        <a href="/signup/student" class="col-3 btn btn-primary"> Student</a>
+        <a href="/signup/parent" class="col-3 btn btn-primary"> Parent</a>
     </div>
-    <div class="col  s12 m7 ">
-        <div class="card col card-base s12 m12 ">
-            <div class="card-content col s12 m12 ">
-                <a
-                href="../houses/common_room/Gryffindor"
-                class="card col s6 m6 center-align gryffindor gryffindor-card house-card waves-effect waves-light"
-            >
-                <div class="card-title bold">
-                    Gryffindor
-                </div>
-                <div>
-                    <p>
-                        Daring, Nerve, and Chivalry
-                    </p>
-                    <img
-                        src="../images/gryffindor_crest.webp"
-                        width="150px"
-                        alt="gryffindor house crest"
-                    />
-                </div>
-                </a>
-                <a
-                    href="../houses/common_room/Slytherin"
-                    class="card col s6 m6 center-align slytherin house-card waves-effect waves-light"
-                >
-                    <div class="card-title bold">
-                        Slytherin
-                    </div>
-                    <div>
-                        <p>
-                            Way To Greatness
-                        </p>
-
-                        <img
-                            src="../images/slytherin_crest.webp"
-                            width="150px"
-                            alt="slytherin house crest"
-                        />
-                    </div>
-                </a>
-                <a
-                    href="../houses/common_room/Hufflepuff"
-                    class="card col s6 m6 center-align hufflepuff house-card waves-effect waves-light"
-                >
-                    <div class="card-title bold">
-                        Hufflepuff
-                        
-                    </div>
-                            True and Unafraid of Toil
-                    <div>
-                        
-                        <img
-                            src="../images/hufflepuff_crest.webp"
-                            width="150px"
-                            alt="hufflepuff house crest"
-                        />
-                    </div>
-                </a>
-                <a
-                    href="../houses/common_room/Ravenclaw"
-                    class="card col s6 m6 center-align ravenclaw ravenclaw-card house-card waves-effect waves-light"
-                >
-                    <div class="card-title bold">
-                        Ravenclaw
-                    </div>
-                    <div>
-                        <p>
-                            Wit Beyond Measure
-                        </p>
-
-                        <img
-                            src="../images/ravenclaw_crest.webp"
-                            width="150px"
-                            alt="ravenclaw house crest"
-                        />
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
+</main>
     
-</div>
