--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,21 +1,9 @@
 <nav class="header">
     <div class="class nav-wrapper container">
-        <a href="/" class="brand-logo center"> <span class="bold">M</span>ossa 
-            <span class="bold">V</span>itri 
-            <span class="bold">C</span>harm</a>
-        <a
-            href="#"
-            data-target="mobile-demo"
-            class="sidenav-trigger show-on-large"
-            ><i class="fas fa-bars"></i
-        ></a>
-        <ul class="sidenav" id="mobile-demo">
-            
-            <li><a class="great_hall bold" href="/great_hall">Great Hall</a></li>
-            <li><a class="gryffindor bold" href="/houses/common_room/Gryffindor">Gryffindor</a></li>
-            <li><a class="slytherin bold" href="/houses/common_room/Slytherin">Slytherin</a></li>
-            <li><a class="hufflepuff bold" href="/houses/common_room/Hufflepuff">Hufflepuff</a></li>
-            <li><a class="ravenclaw bold" href="/houses/common_room/Ravenclaw">Ravenclaw</a></li>
-        </ul>
+        <h1>
+            <a href="/profile" class="brand-logo center"> 
+            SpellWell
+        </a>
+        </h1>
     </div>
 </nav>
