create test model

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,11 @@
+<%- include('partials/header') -%>
 
 <main class="container">
     <div class="row justify-content-around mt-5">
-        <h3>Login</h3>
         <a href="/login" class="col-3 btn btn-primary"> Login</a>
-        <h3>Signup</h3>
-        <p>I am a</p>
-        <a href="/signup/teacher" class="col-3 btn btn-primary"> Teacher</a>
-        <a href="/signup/student" class="col-3 btn btn-primary"> Student</a>
-        <a href="/signup/parent" class="col-3 btn btn-primary"> Parent</a>
+        <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
     </div>
 </main>
     
+
+<%- include('partials/footer') -%>
