add routes and controller for add tests page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -31,6 +31,7 @@
                             <h3>Tests</h3>
                             <a href="#" class="btn-sm btn-primary">Pre-Test</a>
                             <a href="#" class="btn-sm btn-primary">Test</a>
+                            <a href="/add_test" class="btn-sm btn-primary">Add Tests</a>
                         </section>
                     </section>
                 </div>
