--- a/views/add_test.ejs
+++ b/views/add_test.ejs
@@ -1,6 +1,6 @@
-<h3>Add New Person</h3>
+<h3>Add New Test</h3>
 <div class=" row">
-    <form action="/houses" method="POST" class="card card-base col s12 m6 offset-m3">
+    <form action="/tests" method="POST" class="card card-base col s12 m6 offset-m3">
         <div class="row col m12">
             <div class="input-field">
                 <input type="text" id="name" name="name">
