--- a/views/tests/tests.ejs
+++ b/views/tests/tests.ejs
@@ -1,3 +1,4 @@
+<%- include('../partials/header') -%>
 <h3>Add New Person</h3>
 <div class=" row">
     <form action="/houses" method="POST" class="card card-base col s12 m6 offset-m3">
@@ -68,3 +69,4 @@
         </div>
     </form>
 </div>
+<%- include('../partials/footer') -%>
