created randomized spelling lists

--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -56,7 +56,7 @@
                             <h3>Tests</h3>
                             <% if(selectedTest){%>
                             <a href="#" class="btn-sm btn-primary">Pre-Test</a>
-                            <a href="../tests/test/selectedTest" class="btn-sm btn-primary"
+                            <a href="../tests/test/<%=selectedTest._id%>" class="btn-sm btn-primary"
                                 >Test</a
                             >
                             <%}%>
