create student signup and profile path

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
       </div>  
     <div class="row justify-content-md-around">
         <p>I am a ...</p>
-            <a href="/login" class="col col-12 col-md-5   btn btn-primary">Student</a>
-        <a href="/signup" class="col col-12 col-md-5 btn btn-primary">Teacher</a>
+        <a href="./student/signup" class="col col-12 col-md-5   btn btn-primary">Student</a>
+        <a href="./teacher/signup" class="col col-12 col-md-5 btn btn-primary">Teacher</a>
        <a href="/login"class="col col-12  text-center">Login</a>
         
     </div>
