--- a/views/student/signup.ejs
+++ b/views/student/signup.ejs
@@ -1,5 +1,6 @@
-<%- include('partials/header') -%>
+<%- include('../partials/header') -%>
     <main class="container">
+      <h3>Student SignUp</h3>
         <div class="row justify-content-center">
             <section class="col-6 mt-5">
                 <% if (locals.messages.errors) { %>
@@ -12,7 +13,7 @@
                         <div class="alert alert-info"><%= el.msg %></div>
                     <% }) %>    
                 <% } %>
-                <form action="/signup" method="POST">
+                <form action="/student/signup" method="POST">
                     <div class="mb-3">
                         <label for="userName" class="form-label">User Name</label>
                         <input type="text" class="form-control" id="userName" name="userName">
@@ -31,9 +32,10 @@
                         <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                       </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
+                    <a href="../index">Back</a>
                   </form>
             </section>
         </div>
     </main>
 
-<%- include('partials/footer') -%>
+<%- include('../partials/footer') -%>
