--- a/views/teacher/signup.ejs
+++ b/views/teacher/signup.ejs
@@ -31,6 +31,7 @@
                         <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                       </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
+                    <a href="../index">Back</a>
                   </form>
             </section>
         </div>
