--- a/views/teacher/signup.ejs
+++ b/views/teacher/signup.ejs
@@ -1,5 +1,6 @@
-<%- include('partials/header') -%>
+<%- include('../partials/header') -%>
     <main class="container">
+      <h3>Teacher SignUp</h3>
         <div class="row justify-content-center">
             <section class="col-6 mt-5">
                 <% if (locals.messages.errors) { %>
@@ -12,7 +13,7 @@
                         <div class="alert alert-info"><%= el.msg %></div>
                     <% }) %>    
                 <% } %>
-                <form action="/signup" method="POST">
+                <form action="/teacher/signup" method="POST">
                     <div class="mb-3">
                         <label for="userName" class="form-label">User Name</label>
                         <input type="text" class="form-control" id="userName" name="userName">
@@ -37,4 +38,4 @@
         </div>
     </main>
 
-<%- include('partials/footer') -%>
+<%- include('../partials/footer') -%>
