add student test results

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,7 @@
     <body>
         <header class="container">
             <div class="text-center">
-                <h1 class=""><a href="../user/profile">SpellWell</a></h1>
+                <h1 class=""><a href="/login">SpellWell</a></h1>
                 <span>Spelling App</span>
             </div>
         </header>
