--- a/views/teacher/add_test.ejs
+++ b/views/teacher/add_test.ejs
@@ -2,7 +2,7 @@
 
 <h3>Add New Test</h3>
 <div class=" row">
-    <form action="/test/tests" method="POST" class="card card-base col s12 m6 offset-m3">
+    <form action="/teacher/create_test" method="POST" class="card card-base col s12 m6 offset-m3">
         <div class="row col m12">
             <div class="input-field">
                 <label for="title">Title</label>
