--- a/views/tests/results.ejs
+++ b/views/tests/results.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') -%>
-<h3>Add New Person</h3>
+<h3><%=test.title%> Test</h3>
 <div class=" row">
-        <h2>Grade</h2>
+        <h2>Grade: <%=grade%> / 100</h2>
         <div class="text-center row">
         <% for (result of incorrect) {%>
             <span>Incorrect Word: <%=result.incorrectWord%></span>
@@ -9,7 +9,7 @@
         <%}%>
         </div>
         <div class="row center">
-            <a href="/user/profile" class="btn ">Cancel</a>
+            <a href="/login" class="btn ">Cancel</a>
         </div>
 </div>
 <%- include('../partials/footer') -%>
