--- a/views/teacher/add_test.ejs
+++ b/views/teacher/add_test.ejs
@@ -29,7 +29,7 @@
         <div class="row center">
             <input type="submit" value="Create
             " class="btn">
-            <a href="./user/profile" class="btn orange">Cancel</a>
+            <a href="/teacher/profile" class="btn orange">Cancel</a>
         </div>
     </form>
 </div>
