--- a/views/student/signup.ejs
+++ b/views/student/signup.ejs
@@ -1,7 +1,12 @@
 <%- include('../partials/header') -%>
     <main class="container">
-      <h3>Student SignUp</h3>
-        <div class="row justify-content-center">
+      <div class="card">
+        <div class="card-body row">
+          <div class="col-4 card-text text-center">
+            <h3>Student SignUp</h3>
+            <img src="/imgs/student.png" alt="">
+          </div>
+           <div class="col-8 row justify-content-center">
             <section class="col-6 mt-5">
                 <% if (locals.messages.errors) { %>
                     <% messages.errors.forEach( el => { %>
@@ -32,10 +37,14 @@
                         <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                       </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
-                    <a href="../index">Back</a>
+                    <a href="/">Back</a>
                   </form>
             </section>
         </div>
+        </div>
+      </div>
+      
+       
     </main>
 
 <%- include('../partials/footer') -%>
