--- a/views/tests/results.ejs
+++ b/views/tests/results.ejs
@@ -9,7 +9,7 @@
         <%}%>
         </div>
         <div class="row center">
-            <a href="/login" class="btn ">Cancel</a>
+            <a href="/login" class="btn ">Return to Profile</a>
         </div>
 </div>
 <%- include('../partials/footer') -%>
