--- a/views/tests/test.ejs
+++ b/views/tests/test.ejs
@@ -22,7 +22,7 @@
         </div>
         <div class="row center">
             <input type="submit" value="Submit" class="btn btn-primary col-6">
-            <a href="/user/profile" class="btn btn-danger col-6">Cancel</a>
+            <a href="/student/profile" class="btn btn-danger col-6">Cancel</a>
         </div>
     </form>
 </div>
