--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,8 +28,8 @@
     <body>
         <header class="container">
             <div class="text-center">
-                <h1 class=""><a href="/">SpellWell</a></h1>
-                <span>Spelling App</span>
+                <h1 ><a href="/login"class="text-info">SpellWell</a></h1>
+                <span class="text-primary">Spelling App</span>
             </div>
         </header>
     </body>
