--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,9 +27,9 @@
     </head>
     <body>
         <header class="container">
-            <div class="text-center">
+            <div class="text-center mt-2">
                 <h1 ><a href="/login"class="text-info">SpellWell</a></h1>
-                <span class="text-primary">Spelling App</span>
+                
             </div>
         </header>
     </body>
