--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
       <div class=" card m-5 col-6 ">
     <div class=" card-header bg-info">
         <i class="far fa-user text-white fs-2 text mt-2"></i>
-       <p class="card-title text-white fs-4 text"><strong>Login</strong></p>
+       <p class="card-title fs-4 text"><strong>Login</strong></p>
     </div>
     <div class="card-body row justify-content-center">
     <section class="col mt-3">
