--- a/views/student/signup.ejs
+++ b/views/student/signup.ejs
@@ -1,12 +1,13 @@
 <%- include('../partials/header') -%>
-    <main class="container">
-      <div class="card">
-        <div class="card-body row">
-          <div class="col-4 card-text text-center">
+    <main class="container mt-5 bg-primary">
+      <div class="row justify-content-center">
+        <div class=" text-center row col-12 justify-content-center">
+          <div class="card m-5 col-10 ">
+            <div class=" bg-info text-center ">
             <h3>Student SignUp</h3>
-            <img src="/imgs/student.png" alt="">
-          </div>
-           <div class="col-8 row justify-content-center">
+            <img src="/imgs/student.png" class="img-fluid" alt="student sign-in image">
+            </div>
+            <div class=" card-body row justify-content-center">
             <section class="col-6 mt-5">
                 <% if (locals.messages.errors) { %>
                     <% messages.errors.forEach( el => { %>
@@ -36,13 +37,17 @@
                         <label for="confirmPassword" class="form-label">Confirm Password</label>
                         <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                       </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    <a href="/">Back</a>
+                    <button type="submit" class="btn btn-info">Submit</button>
+                    <a href="/"class='btn btn-outline-info'>Back</a>
                   </form>
             </section>
+            </div>
+            
+          </div>
         </div>
-        </div>
+        
       </div>
+      
       
        
     </main>
