--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,14 +1,13 @@
 <%- include('partials/header') -%>
-
 <main class="container mt-5 bg-primary ">
   <div class="row justify-content-center">
     <div class=" row col-12 text-center justify-content-center">
       <div class=" card m-5 col-6 ">
-    <div class=" card-header bg-info">
-        <i class="far fa-user text-white fs-2 text mt-2"></i>
-       <p class="card-title fs-4 text"><strong>Login</strong></p>
-    </div>
-    <div class="card-body row justify-content-center">
+        <div class=" card-header bg-info">
+        <i class="far fa-user fs-2 text mt-2"></i>
+       <p class="card-title fs-4 text">Login</p>
+        </div>
+        <div class="card-body row justify-content-center">
     <section class="col mt-3">
       <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
       <div class="alert alert-danger"><%= el.msg %></div>
@@ -19,7 +18,7 @@
       <form action="/login" method="POST">
         
         <div class="mb-3 ">
-          <label for="exampleInputEmail1" class="form-label text-primary"
+          <label for="exampleInputEmail1" class="form-label"
             >Email address</label
           >
           <input
@@ -31,7 +30,7 @@
           />
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label text-primary">Password</label>
+          <label for="exampleInputPassword1" class="form-label ">Password</label>
           <input
             type="password"
             class="form-control"
@@ -40,18 +39,16 @@
           />
         </div>
         <div class="row gap-2 justify-content-center">
-          <button type="submit" class=" col-md-5 g-2 col-sm-6 btn btn-info text-white">Submit</button>
+          <button type="submit" class=" col-md-5 g-2 col-sm-6 btn btn-info">Submit</button>
         <a href="/"class="col-md-5 g-2 col-sm-6 btn btn-outline-info ">Back</a>
         </div>
         
       </form>
     </section>
-  </div>
-  </div>
+        </div>
+      </div>
     </div>
   </div>
-  
-  
 </main>
 
 <%- include('partials/footer') -%>
