--- a/views/student/signup.ejs
+++ b/views/student/signup.ejs
@@ -1,14 +1,18 @@
 <%- include('../partials/header') -%>
     <main class="container mt-5 bg-primary">
       <div class="row justify-content-center">
-        <div class=" text-center row col-12 justify-content-center">
-          <div class="card m-5 col-10 ">
-            <div class=" bg-info text-center ">
-            <h3>Student SignUp</h3>
-            <img src="/imgs/student.png" class="img-fluid" alt="student sign-in image">
+        <div class="m-5 card  col-8 row justify-content-center">
+            <div class="row justify-content-around">
+          <div class="col-md-5 col-sm-5 card-header d-flex  row align-items-center
+            justify-content-center
+            bg-info">
+              <div>
+              <img src="/imgs/student.png" class="img-fluid" alt="student sign-in image">
+              <h3 class="card-title ">Student SignUp</h3>
+              </div>
             </div>
-            <div class=" card-body row justify-content-center">
-            <section class="col-6 mt-5">
+            <div class="col-md-7 col-sm-8 card-body row text-center justify-content-center">
+              <section class=" mt-3 row ">
                 <% if (locals.messages.errors) { %>
                     <% messages.errors.forEach( el => { %>
                         <div class="alert alert-danger"><%= el.msg %></div>
@@ -19,7 +23,7 @@
                         <div class="alert alert-info"><%= el.msg %></div>
                     <% }) %>    
                 <% } %>
-                <form action="/student/signup" method="POST">
+                <form action="/student/signup" method="POST" class="">
                     <div class="mb-3">
                         <label for="userName" class="form-label">User Name</label>
                         <input type="text" class="form-control" id="userName" name="userName">
@@ -37,19 +41,19 @@
                         <label for="confirmPassword" class="form-label">Confirm Password</label>
                         <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                       </div>
-                    <button type="submit" class="btn btn-info">Submit</button>
-                    <a href="/"class='btn btn-outline-info'>Back</a>
+                      <div class="row gap-2 justify-content-center">
+                        <button type="submit" class="col-md-5 col-sm-6 g-2 btn btn-info">Submit</button>
+                        <a href="/"class='col-md-5 col-sm-6 g-2 btn btn-outline-info'>Back</a>
+                      </div>
+                    
                   </form>
-            </section>
+              </section>
             </div>
+            
             
           </div>
         </div>
-        
       </div>
-      
-      
-       
     </main>
 
 <%- include('../partials/footer') -%>
