--- a/views/student/signup.ejs
+++ b/views/student/signup.ejs
@@ -1,17 +1,15 @@
 <%- include('../partials/header') -%>
     <main class="container mt-5 bg-primary">
       <div class="row justify-content-center">
-        <div class="m-5 card  col-8 row justify-content-center">
+        <div class="m-5 card col-8 row justify-content-center">
             <div class="row justify-content-around">
-          <div class="col-md-5 col-sm-5 card-header d-flex  row align-items-center
-            justify-content-center
-            bg-info">
-              <div>
-              <img src="/imgs/student.png" class="img-fluid" alt="student sign-in image">
-              <h3 class="card-title ">Student SignUp</h3>
+              <div class="col-md-5 col-sm-5 card-header d-flex row align-items-center justify-content-center bg-info">
+                <div>
+                  <img src="/imgs/student.png" class="img-fluid" alt="student sign-in image">
+                  <h3 class="card-title ">Student SignUp</h3>
+                </div>
               </div>
-            </div>
-            <div class="col-md-7 col-sm-8 card-body row text-center justify-content-center">
+              <div class="col-md-7 col-sm-8 card-body row text-center justify-content-center">
               <section class=" mt-3 row ">
                 <% if (locals.messages.errors) { %>
                     <% messages.errors.forEach( el => { %>
@@ -23,11 +21,10 @@
                         <div class="alert alert-info"><%= el.msg %></div>
                     <% }) %>    
                 <% } %>
-                <form action="/student/signup" method="POST" class="">
-                    <div class="mb-3">
+                <form action="/student/signup" method="POST" class="mb-3">
                         <label for="userName" class="form-label">User Name</label>
-                        <input type="text" class="form-control" id="userName" name="userName">
-                      </div>
+                        <input type="text"class="form-control" id="userName" name="userName">
+                    
                     <div class="mb-3">
                       <label for="exampleInputEmail1" class="form-label">Email address</label>
                       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
@@ -48,9 +45,7 @@
                     
                   </form>
               </section>
-            </div>
-            
-            
+              </div>
           </div>
         </div>
       </div>
