--- a/views/teacher/signup.ejs
+++ b/views/teacher/signup.ejs
@@ -1,13 +1,16 @@
 <%- include('../partials/header') -%>
-    <main class="container">
-      <div class="card ">
-        <div class="card-body row">
-<div class="col-4 card-text text-center ">
-          <h3>Teacher SignUp</h3>  
-          <img src="/imgs/teacher.png" alt="">
-        </div>
-          <div class="col-8 row justify-content-center">
-                <section class="col-6 mt-5">
+    <main class="container mt-5 bg-primary">
+      <div class="row justify-content-center">
+        <div class="m-5 card col-8 row justify-content-center">
+          <div class="row justify-content-around">
+            <div class="col-md-5 col-sm-5 card-header d-flex row align-items-center justify-content-center bg-info">
+              <div>
+                <img src="/imgs/teacher.png" class="img-fluid" alt="teacher sign-in image">
+                <h3 class="card-title">Teacher SignUp</h3>
+              </div>
+            </div>
+            <div class="col-md-7 col-sm-8 card-body row text-center justify-content-center">
+                <section class=" mt-3 row">
                     <% if (locals.messages.errors) { %>
                         <% messages.errors.forEach( el => { %>
                             <div class="alert alert-danger"><%= el.msg %></div>
@@ -18,11 +21,9 @@
                             <div class="alert alert-info"><%= el.msg %></div>
                         <% }) %>    
                     <% } %>
-                    <form action="/teacher/signup" method="POST">
-                        <div class="mb-3">
+                    <form action="/teacher/signup" method="POST" class="mb-3">
                             <label for="userName" class="form-label">User Name</label>
                             <input type="text" class="form-control" id="userName" name="userName">
-                          </div>
                         <div class="mb-3">
                           <label for="exampleInputEmail1" class="form-label">Email address</label>
                           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
@@ -36,17 +37,16 @@
                             <label for="confirmPassword" class="form-label">Confirm Password</label>
                             <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                           </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                        <a href="/">Back</a>
+                          <div class="row gap-2 justify-content-center">
+                            <button type="submit" class="cpl-md-5 col-sm-6 g-2 btn btn-info">Submit</button>
+                        <a href="/" class="col-md-5 col-sm-6 g-2 btn btn-outline-info">Back</a>
+                          </div>
                       </form>
                 </section>
-              </div>
+            </div>
+          </div>
         </div>
-        
       </div>
-        
-      
-      
     </main>
 
 <%- include('../partials/footer') -%>
