--- a/views/student/signup.ejs
+++ b/views/student/signup.ejs
@@ -31,6 +31,10 @@
                       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
                     <div class="mb-3">
+                      <label for="classId" class="form-label">ClassId</label>
+                      <input type="text" class="form-control" id="classId" name="classId">
+                    </div>
+                    <div class="mb-3">
                       <label for="password" class="form-label">Password</label>
                       <input type="password" class="form-control" id="password" name="password">
                     </div>
