--- a/views/tests/results.ejs
+++ b/views/tests/results.ejs
@@ -1,6 +1,8 @@
 <%- include('../partials/header') -%>
-<h3><%=test.title%> Test</h3>
-<div class=" row">
+<main class="container mt-5 bg-primary">
+    <div class="row justify-content-center">
+          <h3 class="text-white"><%=test.title%> Test</h3>
+    <div class=" card m-5 col-8 row">
         <h2>Grade: <%=grade%> / 100</h2>
         <div class="text-center row">
         <% for (result of incorrect) {%>
@@ -8,8 +10,12 @@
             <span>Correct Word: <%=result.correctWord%></span>
         <%}%>
         </div>
-        <div class="row center">
-            <a href="/login" class="btn ">Return to Profile</a>
+        <div class="row center col-6 justify-content-center">
+            <a href="/login" class="btn btn-outline-info">Return to Profile</a>
         </div>
-</div>
+    </div>
+  
+    </div>
+</main>
+
 <%- include('../partials/footer') -%>
